--- a/package.json
+++ b/package.json
@@ -50,5 +50,17 @@
     "nodemon": "^2.0.22",
     "tslib": "^2.5.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 14.2.6.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jacques1988/mean.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jacques1988/mean/issues"
+  },
+  "homepage": "https://github.com/Jacques1988/mean#readme"
 }
